spectec/test/interp/neg/type-mismatch-declaration.imp
// Initializer's type does not match the declared type.
int b = true
